libxc-ffi/src/ffi_xc_static.rs

    #[doc = " Evaluates the energy density and its first and second derivatives for an     LDA functional"]
    pub fn xc_lda_exc_vxc_fxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
        v2rho2: *mut f64,
    );
    #[doc = " Evaluates the energy density and its first and second derivatives for a      GGA functional"]
    pub fn xc_gga_exc_vxc_fxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2sigma2: *mut f64,
    );
    #[doc = " Evaluates the energy density and its first and second derivatives for a meta-GGA functional"]
    pub fn xc_mgga_exc_vxc_fxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        vlapl: *mut f64,
        vtau: *mut f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2rholapl: *mut f64,
        v2rhotau: *mut f64,
        v2sigma2: *mut f64,
        v2sigmalapl: *mut f64,
        v2sigmatau: *mut f64,
        v2lapl2: *mut f64,
        v2lapltau: *mut f64,
        v2tau2: *mut f64,
    );
    #[doc = " Evaluates the first and second derivatives for an     LDA functional"]
    pub fn xc_lda_vxc_fxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        vrho: *mut f64,
        v2rho2: *mut f64,
    );
    #[doc = " Evaluates the first and second derivatives for a      GGA functional"]
    pub fn xc_gga_vxc_fxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2sigma2: *mut f64,
    );
    #[doc = " Evaluates the first and second derivatives for a meta-GGA functional"]
    pub fn xc_mgga_vxc_fxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        vlapl: *mut f64,
        vtau: *mut f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2rholapl: *mut f64,
        v2rhotau: *mut f64,
        v2sigma2: *mut f64,
        v2sigmalapl: *mut f64,
        v2sigmatau: *mut f64,
        v2lapl2: *mut f64,
        v2lapltau: *mut f64,
        v2tau2: *mut f64,
    );
    #[doc = " Evaluates the second derivative for an     LDA functional"]
    pub fn xc_lda_fxc(p: *const xc_func_type, np: usize, rho: *const f64, v2rho2: *mut f64);
    #[doc = " Evaluates the second derivative for a      GGA functional"]
    pub fn xc_gga_fxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2sigma2: *mut f64,
    );
    #[doc = " Evaluates the second derivative for a meta-GGA functional"]
    pub fn xc_mgga_fxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2rholapl: *mut f64,
        v2rhotau: *mut f64,
        v2sigma2: *mut f64,
        v2sigmalapl: *mut f64,
        v2sigmatau: *mut f64,
        v2lapl2: *mut f64,
        v2lapltau: *mut f64,
        v2tau2: *mut f64,
    );
    #[doc = " Evaluates the energy density and its first, second, and third derivatives for an     LDA functional"]
    pub fn xc_lda_exc_vxc_fxc_kxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
        v2rho2: *mut f64,
        v3rho3: *mut f64,
    );
    #[doc = " Evaluates the energy density and its first, second, and third derivatives for a      GGA functional"]
    pub fn xc_gga_exc_vxc_fxc_kxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2sigma2: *mut f64,
        v3rho3: *mut f64,
        v3rho2sigma: *mut f64,
        v3rhosigma2: *mut f64,
        v3sigma3: *mut f64,
    );
    #[doc = " Evaluates the energy density and its first, second, and third derivatives for a meta-GGA functional"]
    pub fn xc_mgga_exc_vxc_fxc_kxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        vlapl: *mut f64,
        vtau: *mut f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2rholapl: *mut f64,
        v2rhotau: *mut f64,
        v2sigma2: *mut f64,
        v2sigmalapl: *mut f64,
        v2sigmatau: *mut f64,
        v2lapl2: *mut f64,
        v2lapltau: *mut f64,
        v2tau2: *mut f64,
        v3rho3: *mut f64,
        v3rho2sigma: *mut f64,
        v3rho2lapl: *mut f64,
        v3rho2tau: *mut f64,
        v3rhosigma2: *mut f64,
        v3rhosigmalapl: *mut f64,
        v3rhosigmatau: *mut f64,
        v3rholapl2: *mut f64,
        v3rholapltau: *mut f64,
        v3rhotau2: *mut f64,
        v3sigma3: *mut f64,
        v3sigma2lapl: *mut f64,
        v3sigma2tau: *mut f64,
        v3sigmalapl2: *mut f64,
        v3sigmalapltau: *mut f64,
        v3sigmatau2: *mut f64,
        v3lapl3: *mut f64,
        v3lapl2tau: *mut f64,
        v3lapltau2: *mut f64,
        v3tau3: *mut f64,
    );
    #[doc = " Evaluates the first, second, and third derivatives for an     LDA functional"]
    pub fn xc_lda_vxc_fxc_kxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        vrho: *mut f64,
        v2rho2: *mut f64,
        v3rho3: *mut f64,
    );
    #[doc = " Evaluates the first, second, and third derivatives for a      GGA functional"]
    pub fn xc_gga_vxc_fxc_kxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2sigma2: *mut f64,
        v3rho3: *mut f64,
        v3rho2sigma: *mut f64,
        v3rhosigma2: *mut f64,
        v3sigma3: *mut f64,
    );
    #[doc = " Evaluates the first, second, and third derivatives for a meta-GGA functional"]
    pub fn xc_mgga_vxc_fxc_kxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        vlapl: *mut f64,
        vtau: *mut f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2rholapl: *mut f64,
        v2rhotau: *mut f64,
        v2sigma2: *mut f64,
        v2sigmalapl: *mut f64,
        v2sigmatau: *mut f64,
        v2lapl2: *mut f64,
        v2lapltau: *mut f64,
        v2tau2: *mut f64,
        v3rho3: *mut f64,
        v3rho2sigma: *mut f64,
        v3rho2lapl: *mut f64,
        v3rho2tau: *mut f64,
        v3rhosigma2: *mut f64,
        v3rhosigmalapl: *mut f64,
        v3rhosigmatau: *mut f64,
        v3rholapl2: *mut f64,
        v3rholapltau: *mut f64,
        v3rhotau2: *mut f64,
        v3sigma3: *mut f64,
        v3sigma2lapl: *mut f64,
        v3sigma2tau: *mut f64,
        v3sigmalapl2: *mut f64,
        v3sigmalapltau: *mut f64,
        v3sigmatau2: *mut f64,
        v3lapl3: *mut f64,
        v3lapl2tau: *mut f64,
        v3lapltau2: *mut f64,
        v3tau3: *mut f64,
    );
    #[doc = " Evaluates the third derivative for an     LDA functional"]
    pub fn xc_lda_kxc(p: *const xc_func_type, np: usize, rho: *const f64, v3rho3: *mut f64);
    #[doc = " Evaluates the third derivative for a      GGA functional"]
    pub fn xc_gga_kxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        v3rho3: *mut f64,
        v3rho2sigma: *mut f64,
        v3rhosigma2: *mut f64,
        v3sigma3: *mut f64,
    );
    #[doc = " Evaluates the third derivative for a meta-GGA functional"]
    pub fn xc_mgga_kxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        v3rho3: *mut f64,
        v3rho2sigma: *mut f64,
        v3rho2lapl: *mut f64,
        v3rho2tau: *mut f64,
        v3rhosigma2: *mut f64,
        v3rhosigmalapl: *mut f64,
        v3rhosigmatau: *mut f64,
        v3rholapl2: *mut f64,
        v3rholapltau: *mut f64,
        v3rhotau2: *mut f64,
        v3sigma3: *mut f64,
        v3sigma2lapl: *mut f64,
        v3sigma2tau: *mut f64,
        v3sigmalapl2: *mut f64,
        v3sigmalapltau: *mut f64,
        v3sigmatau2: *mut f64,
        v3lapl3: *mut f64,
        v3lapl2tau: *mut f64,
        v3lapltau2: *mut f64,
        v3tau3: *mut f64,
    );
    #[doc = " Evaluates the fourth derivative for an     LDA functional"]
    pub fn xc_lda_lxc(p: *const xc_func_type, np: usize, rho: *const f64, v4rho4: *mut f64);
    #[doc = " Evaluates the fourth derivative for a      GGA functional"]
    pub fn xc_gga_lxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        v4rho4: *mut f64,
        v4rho3sigma: *mut f64,
        v4rho2sigma2: *mut f64,
        v4rhosigma3: *mut f64,
        v4sigma4: *mut f64,
    );
    #[doc = " Evaluates the fourth derivative for a meta-GGA functional"]
    pub fn xc_mgga_lxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        v4rho4: *mut f64,
        v4rho3sigma: *mut f64,
        v4rho3lapl: *mut f64,
        v4rho3tau: *mut f64,
        v4rho2sigma2: *mut f64,
        v4rho2sigmalapl: *mut f64,
        v4rho2sigmatau: *mut f64,
        v4rho2lapl2: *mut f64,
        v4rho2lapltau: *mut f64,
        v4rho2tau2: *mut f64,
        v4rhosigma3: *mut f64,
        v4rhosigma2lapl: *mut f64,
        v4rhosigma2tau: *mut f64,
        v4rhosigmalapl2: *mut f64,
        v4rhosigmalapltau: *mut f64,
        v4rhosigmatau2: *mut f64,
        v4rholapl3: *mut f64,
        v4rholapl2tau: *mut f64,
        v4rholapltau2: *mut f64,
        v4rhotau3: *mut f64,
        v4sigma4: *mut f64,
        v4sigma3lapl: *mut f64,
        v4sigma3tau: *mut f64,
        v4sigma2lapl2: *mut f64,
        v4sigma2lapltau: *mut f64,
        v4sigma2tau2: *mut f64,
        v4sigmalapl3: *mut f64,
        v4sigmalapl2tau: *mut f64,
        v4sigmalapltau2: *mut f64,
        v4sigmatau3: *mut f64,
        v4lapl4: *mut f64,
        v4lapl3tau: *mut f64,
        v4lapl2tau2: *mut f64,
        v4lapltau3: *mut f64,
        v4tau4: *mut f64,
    );
    pub fn xc_gga_ak13_get_asymptotic(homo: f64) -> f64;
    pub fn xc_gga_ak13_pars_get_asymptotic(homo: f64, ext_params: *const f64) -> f64;
    pub fn xc_hyb_exx_coef(p: *const xc_func_type) -> f64;
    pub fn xc_hyb_cam_coef(
        p: *const xc_func_type,
        omega: *mut f64,
        alpha: *mut f64,
        beta: *mut f64,
    );
    pub fn xc_nlc_coef(p: *const xc_func_type, nlc_b: *mut f64, nlc_C: *mut f64);
    pub fn xc_num_aux_funcs(p: *const xc_func_type) -> c_int;
    pub fn xc_aux_func_ids(p: *const xc_func_type, ids: *mut c_int);
    pub fn xc_aux_func_weights(p: *const xc_func_type, weights: *mut f64);
}
